// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-urYIk-size-md .c-ihQtuj,
  .c-cwQMhQ-urYIk-size-md .c-jhJxGZ,
  .c-cwQMhQ-urYIk-size-md .c-jwhJBv {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-bzJeMb-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-tonal50);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-urYIk-size-md c-cwQMhQ-fplEaP-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-bzJeMb-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with a themed header 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-urYIk-size-md .c-ihQtuj,
  .c-cwQMhQ-urYIk-size-md .c-jhJxGZ,
  .c-cwQMhQ-urYIk-size-md .c-jwhJBv {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-bzJeMb-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-tonal50);
  }

  .c-cwQMhQ-jzCEki-size-lg .c-ihQtuj,
  .c-cwQMhQ-jzCEki-size-lg .c-jhJxGZ,
  .c-cwQMhQ-jzCEki-size-lg .c-jwhJBv {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }

  .c-cwQMhQ-dWxbfb-size-xl .c-ihQtuj,
  .c-cwQMhQ-dWxbfb-size-xl .c-jhJxGZ,
  .c-cwQMhQ-dWxbfb-size-xl .c-jwhJBv {
    height: var(--sizes-6);
    padding: var(--space-4) var(--space-3);
  }

  .c-PJLV-jSYITb-theme-primary .c-jhJxGZ {
    background: var(--colors-primary);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-urYIk-size-md c-cwQMhQ-fplEaP-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-jSYITb-theme-primary"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to lg 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-urYIk-size-md .c-ihQtuj,
  .c-cwQMhQ-urYIk-size-md .c-jhJxGZ,
  .c-cwQMhQ-urYIk-size-md .c-jwhJBv {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-bzJeMb-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-tonal50);
  }

  .c-cwQMhQ-jzCEki-size-lg .c-ihQtuj,
  .c-cwQMhQ-jzCEki-size-lg .c-jhJxGZ,
  .c-cwQMhQ-jzCEki-size-lg .c-jwhJBv {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-jzCEki-size-lg c-cwQMhQ-fplEaP-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-bzJeMb-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with size set to xl 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-urYIk-size-md .c-ihQtuj,
  .c-cwQMhQ-urYIk-size-md .c-jhJxGZ,
  .c-cwQMhQ-urYIk-size-md .c-jwhJBv {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-bzJeMb-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-tonal50);
  }

  .c-cwQMhQ-jzCEki-size-lg .c-ihQtuj,
  .c-cwQMhQ-jzCEki-size-lg .c-jhJxGZ,
  .c-cwQMhQ-jzCEki-size-lg .c-jwhJBv {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }

  .c-cwQMhQ-dWxbfb-size-xl .c-ihQtuj,
  .c-cwQMhQ-dWxbfb-size-xl .c-jhJxGZ,
  .c-cwQMhQ-dWxbfb-size-xl .c-jwhJBv {
    height: var(--sizes-6);
    padding: var(--space-4) var(--space-3);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-dWxbfb-size-xl c-cwQMhQ-fplEaP-corners-round c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-bzJeMb-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with square corners 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-urYIk-size-md .c-ihQtuj,
  .c-cwQMhQ-urYIk-size-md .c-jhJxGZ,
  .c-cwQMhQ-urYIk-size-md .c-jwhJBv {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-bzJeMb-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-tonal50);
  }

  .c-cwQMhQ-jzCEki-size-lg .c-ihQtuj,
  .c-cwQMhQ-jzCEki-size-lg .c-jhJxGZ,
  .c-cwQMhQ-jzCEki-size-lg .c-jwhJBv {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }

  .c-cwQMhQ-dWxbfb-size-xl .c-ihQtuj,
  .c-cwQMhQ-dWxbfb-size-xl .c-jhJxGZ,
  .c-cwQMhQ-dWxbfb-size-xl .c-jwhJBv {
    height: var(--sizes-6);
    padding: var(--space-4) var(--space-3);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }
}

<div>
  <table
    class="c-cwQMhQ c-cwQMhQ-urYIk-size-md c-cwQMhQ-icnGIKd-css"
  >
    <thead
      class="c-PJLV c-PJLV-bzJeMb-theme-primaryDark"
    >
      <tr
        class="c-hjAYDb"
      >
        <th
          class="c-jhJxGZ"
        >
          Column A
        </th>
      </tr>
    </thead>
    <tbody
      class="c-PJLV c-PJLV-gdcSSw-striped-true"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          This is text
        </td>
      </tr>
    </tbody>
    <tfoot
      class="c-PJLV"
    >
      <tr
        class="c-hjAYDb"
      >
        <td
          class="c-ihQtuj"
        >
          Footer 1
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Table component renders with sticky columns 1`] = `
@media  {
  .c-cwQMhQ {
    border-collapse: separate;
    border-spacing: 0;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-sm);
    width: 100%;
  }

  .c-hjAYDb {
    background: unset;
  }

  .c-jhJxGZ {
    color: white;
    font-family: var(--fonts-body);
    font-weight: 600;
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj {
    border-bottom: 1px solid var(--colors-tonal100);
    box-sizing: border-box;
    color: var(--colors-tonal400);
    font-family: var(--fonts-body);
    line-height: 1.5;
    text-align: left;
    vertical-align: middle;
  }

  .c-ihQtuj:first-child {
    font-weight: bold;
  }
}

@media  {
  .c-cwQMhQ-urYIk-size-md .c-ihQtuj,
  .c-cwQMhQ-urYIk-size-md .c-jhJxGZ,
  .c-cwQMhQ-urYIk-size-md .c-jwhJBv {
    height: var(--sizes-4);
    padding: var(--space-1) var(--space-3);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:first-of-type {
    border-top-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-jhJxGZ:last-of-type {
    border-top-right-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:first-child {
    border-bottom-left-radius: var(--radii-0);
  }

  .c-cwQMhQ-fplEaP-corners-round .c-hjAYDb:last-child .c-ihQtuj:last-child {
    border-bottom-right-radius: var(--radii-0);
  }

  .c-PJLV-bzJeMb-theme-primaryDark .c-jhJxGZ {
    background: var(--colors-primaryDark);
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(odd) {
    background: white;
  }

  .c-PJLV-gdcSSw-striped-true .c-hjAYDb:nth-child(even) {
    background: var(--colors-tonal50);
  }

  .c-cwQMhQ-jzCEki-size-lg .c-ihQtuj,
  .c-cwQMhQ-jzCEki-size-lg .c-jhJxGZ,
  .c-cwQMhQ-jzCEki-size-lg .c-jwhJBv {
    height: var(--sizes-5);
    padding: var(--space-2) var(--space-3);
  }

  .c-cwQMhQ-dWxbfb-size-xl .c-ihQtuj,
  .c-cwQMhQ-dWxbfb-size-xl .c-jhJxGZ,
  .c-cwQMhQ-dWxbfb-size-xl .c-jwhJBv {
    height: var(--sizes-6);
    padding: var(--space-4) var(--space-3);
  }

  .c-PJLV-jSYITb-theme-primary .c-jhJxGZ {
    background: var(--colors-primary);
  }
}

@media  {
  .c-cwQMhQ-icnGIKd-css {
    height: 100px;
    width: 400px;
  }

  .c-PJLV-iiXkAWq-css {
    overflow: auto;
    max-width: 100%;
  }

  .c-PJLV-iiXkAWq-css td {
    background: inherit;
  }

  .c-cwQMhQ-idVpojG-css {
    height: 100px;
    width: 300px;
  }

  .c-PJLV-igbAmsf-css {
    overflow: auto;
    max-width: 100%;
  }

  .c-PJLV-igbAmsf-css td:nth-of-type(1),
  .c-PJLV-igbAmsf-css th:nth-of-type(1) {
    position: sticky;
    left: 0px;
    min-width: 0px;
    z-index: 2;
  }

  .c-PJLV-igbAmsf-css td {
    background: inherit;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-igbAmsf-css"
    role="scrollbar"
  >
    <table
      class="c-cwQMhQ c-cwQMhQ-urYIk-size-md c-cwQMhQ-fplEaP-corners-round c-cwQMhQ-idVpojG-css"
    >
      <thead
        class="c-PJLV c-PJLV-bzJeMb-theme-primaryDark"
        numberofstickycolumns="1"
      >
        <tr
          class="c-hjAYDb"
        >
          <th
            class="c-jhJxGZ"
          >
            Column A
          </th>
          <th
            class="c-jhJxGZ"
          >
            Column B
          </th>
          <th
            class="c-jhJxGZ"
          >
            Column C
          </th>
        </tr>
      </thead>
      <tbody
        class="c-PJLV c-PJLV-gdcSSw-striped-true"
        numberofstickycolumns="1"
      >
        <tr
          class="c-hjAYDb"
        >
          <td
            class="c-ihQtuj"
          >
            This is text
          </td>
          <td
            class="c-ihQtuj"
          >
            This is text
          </td>
          <td
            class="c-ihQtuj"
          >
            This is text
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
